# drp

./: .env  .env.example  .gitignore  CLI.md  COMMERCIAL.md  LICENSE  Makefile  README.md  db_reset.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
billing/: models.py  urls.py  views.py
cli/: __init__.py  __main__.py  api.py  completion.py  config.py  crash_reporter.py  drp.py  format.py  path_check.py  progress.py  session.py  spinner.py  tests.py  tests_completion.py  tests_integration.py  tests_unit.py  timing.py
cli/api/: __init__.py  actions.py  auth.py  file.py  helpers.py  text.py
cli/commands/: cp.py  diff.py  edit.py  get.py  load.py  ls.py  manage.py  save.py  serve.py  setup.py  status.py  upload.py
cli/tests/: conftest.py  test_commands.py  test_completion.py  test_crash_reporter.py  test_session.py  test_timing_format.py  test_unit.py
core/: admin.py  apps.py  context_processors.py  email_backend.py  error_reporting_logic.py  models.py  tests.py  tests_error_reporting.py  urls.py  views.py
core/management/commands/: cleanup.py  purge_test_data.py
core/migrations/: 0001_initial.py  0002_drop_last_viewed_at_drop_view_count.py  0002_drop_remove_binfile_bin_delete_clipboard_delete_bin_and_more.py  0002_emailverification_bugreport.py  0002_remove_drop_file_drop_file_public_id_drop_file_url.py  0002_saveddrop.py  0003_alter_drop_file.py  0003_alter_drop_unique_together_drop_last_accessed_at_and_more.py  0003_drop_anon_token.py  0003_drop_burn.py  0003_userprofile_notify_bug_fix.py  0004_drop_locked_until_alter_drop_file.py  0004_drop_password_hash.py  0005_drop_expires_at_drop_locked_drop_owner_and_more.py  0006_userprofile_ls_customer_id_and_more.py
core/templatetags/: drop_tags.py
core/tests/: helpers.py  test_b2.py  test_download.py  test_error_reporting.py  test_models.py  test_password.py  test_storage.py  test_upload.py
core/views/: __init__.py  actions.py  auth.py  b2.py  bookmarks.py  bug_report.py  drops.py  error_handler.py  error_reporting.py  github_webhook.py  helpers.py  legal.py  verify.py
docs/: cli-reference.md
help/: apps.py  urls.py  views.py
integration_tests/: README.md  conftest.py  pytest.ini
integration_tests/cli/: test_account.py  test_browse.py  test_manage.py  test_parser.py  test_serve.py  test_upload_download.py
integration_tests/core/: test_api_access.py  test_api_actions.py  test_api_auth.py  test_api_file.py  test_api_plans.py  test_api_text.py
project/: settings.py  urls.py
project/static/css/: ads.css  auth.css  base.css  bookmark.css  drop.css  help.css  home.css  main.css
project/static/js/: main.js
project/templates/: account.html  base.html  bin.html  bug_report.html  bug_report_done.html  clipboard.html  drop.html  error.html  expired.html  help.html  home.html  login.html  password_prompt.html  register.html
project/templates/admin/: base_site.html  broadcast_email.html
project/templates/ads/: slot.html
project/templates/auth/: account.html  bookmark_btn.html  login.html  register.html  verify_done.html  verify_expired.html  verify_invalid.html  verify_required.html  verify_resend.html
project/templates/help/: base.html  cli.html  expiry.html  index.html  plans.html  privacy.html
project/templates/legal/: privacy.html  terms.html
project/templates/partials/: bookmark_btn.html
project/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
sync/: client.py  install.sh  start.sh  tests.py
tests/integration/: conftest.py  test_api_core.py  test_plans.py
tests/unit/: conftest.py  test_cli_pure.py  test_commands.py  test_drop_model.py  test_plan_limits.py  test_storage_and_helpers.py  test_upload_views.py
