[tool.pytest.ini_options]
testpaths = ["cli/tests", "core/tests"]
DJANGO_SETTINGS_MODULE = "project.settings"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drp-cli"
dynamic = ["version"]
description = "Drop text and files from the command line — get a link instantly."
readme = "README.md"
# This license applies to the CLI package (cli/ directory) only.
# The server code in this repo is licensed separately — see LICENSE.
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
authors = [{name = "Vic Nas"}]
keywords = ["cli", "file-sharing", "pastebin", "drops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.optional-dependencies]
completion = ["argcomplete>=3.1"]
dev = [
    "pytest",
    "pytest-django",
    "pytest-asyncio",
    "pytest-cov",
    "django>=5.0",
    "python-dotenv",
    "dj-database-url",
    "whitenoise",
    "gunicorn",
    "requests",
    "psycopg2-binary>=2.9",
    "resend",
    "boto3",
    "markdown",
    "argcomplete>=3.1"
]

[project.urls]
Homepage  = "https://drp.vicnas.me"
Repository = "https://github.com/vicnasdev/drp"
Issues    = "https://github.com/vicnasdev/drp/issues"

[project.scripts]
drp = "cli.drp:main"

[tool.setuptools.dynamic]
version = {attr = "cli.__version__"}

[tool.setuptools.packages.find]
include = ["cli*"]